[package]
name = "vgpu"
description = "VGPU - support for bindless textures in Vulkan"
version = "0.1.0"
authors = ["John Nagle <nagle@animats.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
env_logger = "0.10.1"

[[example]]
name = "hello-triangle"
path = "src/examples/hello-triangle/lib.rs"
